--- a/views/index.mustache
+++ b/views/index.mustache
@@ -6,7 +6,12 @@
 		</title>
 	</head>
 	<body>
-		<p>Welcome</p>
-		
+		<h1>Welcome</h1>
+		<form action='/foo' method='post'>
+			<label for="foo">foo<input type="submit" name="foo" value=""></label>
+		</form>
+		<form action='/bar' method='post'>
+			<label for="bar">bar<input type="submit" name="bar" value=""></label>
+		</form>
 	</body>
 </html>
